going into hyperneat yo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Minimata\\Anaconda3\\envs\\pytorchGPU\\python.exe"
+    "python.pythonPath": "C:\\Users\\Minimata\\Anaconda3\\envs\\pytorchGPU\\python.exe",
+    "python.linting.enabled": false
 }
